[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/waterways/icons/create.svg" type="Texture" id=1]
[ext_resource path="res://addons/waterways/icons/select.svg" type="Texture" id=2]
[ext_resource path="res://addons/waterways/icons/delete.svg" type="Texture" id=3]
[ext_resource path="res://addons/waterways/gui/river_controls.gd" type="Script" id=4]
[ext_resource path="res://addons/waterways/gui/river_menu.gd" type="Script" id=5]

[node name="HBoxContainer" type="HBoxContainer"]
margin_right = 128.0
margin_bottom = 26.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RiverMenu" type="MenuButton" parent="."]
margin_right = 44.0
margin_bottom = 26.0
text = "River"
items = [ "Generate Flow & Foam Map", null, 0, false, false, 0, 0, null, "", false, "Generate MeshInstance Sibling", null, 0, false, false, 1, 0, null, "", false, "Debug View", null, 0, false, false, 2, 0, null, "DebugViewMenu", false ]
script = ExtResource( 5 )

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 48.0
margin_right = 52.0
margin_bottom = 26.0

[node name="Select" type="Button" parent="."]
margin_left = 56.0
margin_right = 84.0
margin_bottom = 26.0
toggle_mode = true
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="."]
margin_left = 88.0
margin_right = 116.0
margin_bottom = 26.0
toggle_mode = true
icon = ExtResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remove" type="Button" parent="."]
margin_left = 120.0
margin_right = 148.0
margin_bottom = 26.0
toggle_mode = true
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SnapToColliders" type="CheckBox" parent="."]
margin_left = 152.0
margin_right = 286.0
margin_bottom = 26.0
text = "Snap to colliders"
flat = true
[connection signal="pressed" from="Select" to="." method="_on_select"]
[connection signal="pressed" from="Add" to="." method="_on_add"]
[connection signal="pressed" from="Remove" to="." method="_on_remove"]
[connection signal="toggled" from="SnapToColliders" to="." method="_on_snap_to_colliders"]
